--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">HeyHoop</string>
-    <string name="title">Hey Hoop</string>
+    <string name="title">HeyHoop</string>
     <string name="provider_name">Data for chart</string>
     <string name="no_entries">Empty</string>
     <string name="chartdroid_download_title">ChartDroid needed</string>
@@ -58,5 +58,7 @@
     <string name="drink_wellbeing">Drink</string>
     <string name="walk_wellbeing">Walk</string>
     <string name="widget_button_text">Hello!</string>
+    <string name="faller_paused_text">Touch to resume</string>
+    <string name="faller_title">HeyHoop Faller</string>
 
 </resources>
